# diary_kg

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  README.md  commit.txt  pepys_mpnet_embeddings_run_summary.md  pyproject.toml  release-notes.md
.claude/commands/: release.md  setup-diarykg-mcp.md  sync-mcp-docs.md
.claude/skills/codekg/: clinerules.md
.claude/skills/dockg/: SKILL.md
.claude/skills/kgrag-usage/: SKILL.md
.claude/skills/publish/: SKILL.md
.codekg/snapshots/: manifest.json
.diarykg/: config.json
.diarykg/snapshots/: manifest.json
.dockg/snapshots/: manifest.json
.filetreekg/snapshots/: manifest.json
.github/: SNAPSHOTS_CI.md
.github/workflows/: ci.yml  publish.yml
.pycodekg/snapshots/: manifest.json
analysis/: diary_kg_analysis_20260324.md  diary_kg_analysis_20260327.md
benchmarks/: MISSION_BRIEFING.md  pepys_ch5_flight.py  pepys_embedder.py  pepys_ingestion_sweep.py  pepys_manifold_explorer_reference.py  pepys_mpnet_embeddings_run_summary.md  pepys_mpnet_explorer.py  pepys_mpnet_results.json  pepys_temporal_flight.py
diary/: pepys_clean_small_chunks.pkl  pepys_only_topics.yaml
diary/.diary_cache/: diversity_features_31ffa0573c9b.pkl
docs/: ADAPTER_SPEC.md  PIPELINE_TECHNICAL_DISCLOSURE.md  TEMPORAL_FLIGHT_CH5.md
pepys/: COMPLETE_TECHNICAL_ARTICLE.md  analyze_pepys_entities.py  analyze_sentence_structure.py  diary_transformer_example.py  hindsight_analysis.py  nlp_ingestion_workflow.md  pepys_enriched_full_mpnet_embeddings_run_summary.md  pepys_enriched_full_run_summary.md  pepys_proper_parse.py  topic_classifier.py
pepys/diary_kg/: cli.py  kg.py  snapshots.py
pepys/diary_transformer/: chunker.py  classifier.py  state.py
pepys/tests/: conftest.py  test_diary_kg.py  test_diary_kg_adapter.py  test_diary_kg_cli.py  test_diary_transformer_cli.py  test_diary_transformer_parser.py
scripts/: benchmark_embedders.py  generate_wiki.py  install-skill.sh  rebuild-diary-kg.sh
src/diary_kg/: __init__.py  cli.py  kg.py  mcp_server.py  primitives.py  snapshots.py
src/diary_kg/module/: __init__.py  base.py  types.py
src/diary_transformer/: __init__.py  chunker.py  classifier.py  cli.py  diary_embedder.py  features.py  models.py  parser.py  state.py  topic_classifier.py  transformer.py
tests/: conftest.py  test_diary_kg.py  test_diary_kg_adapter.py  test_diary_kg_cli.py  test_diary_kg_snapshots.py  test_diary_transformer_classifier.py  test_diary_transformer_cli.py  test_diary_transformer_models.py  test_diary_transformer_state.py  test_snapshot_subclass.py
