# DiaryKG - Knowledge Graph Builder for Diaries and Journals
#
# DiaryKG ingests diary/journal text files into a searchable knowledge graph,
# using DocKG-backed storage (SQLite + LanceDB) and DiaryTransformer for chunking.
#
# Author: Eric G. Suchanek, PhD
# Last Revision: 2026-03-16



[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diary-kg"
version = "0.1.0"
description = "A knowledge graph builder for diaries and journals"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
readme = "README.md"
keywords = ["knowledge-graph", "diary", "journal", "lancedb", "sqlite", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "diary_kg", from = "src" },
    { include = "diary_transformer", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
lancedb = ">=0.29.0"
numpy = ">=1.24.0"
sentence-transformers = ">=2.7.0"
pandas = ">=2.0.0"
rich = ">=13.0.0"
click = ">=8.1.0"
mcp = ">=1.0.0"
pyyaml = ">=6.0"
scikit-learn = ">=1.3.0"
doc-kg = { git = "https://github.com/Flux-Frontiers/doc_kg.git" }
code-kg = { git = "https://github.com/Flux-Frontiers/code_kg.git" }
[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = ">=3.0.0"

[tool.poetry.scripts]
diarykg         = "diary_kg.cli:main"
diarykg-mcp     = "diary_kg.mcp_server:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "cyclic-import",
    "broad-exception-caught",
    "cell-var-from-loop",
    "undefined-variable",
    "import-outside-toplevel",
]

[tool.dockg]
exclude = [".dockg", ".diarykg", "src", ".git", ".venv", "venv", "__pycache__",
".mypy_cache", ".pytest_cache", "bundles", "dist"]
