# DiaryKG — Knowledge Graph for Diaries and Journals
#
# DiaryKG builds a searchable semantic knowledge graph from diary and journal
# corpora. It ingests plain-text diary files, chunks them with DiaryTransformer,
# and indexes the results into SQLite + LanceDB for natural-language querying.
#
# Key Features:
# - Diary ingestion with sentence-group, semantic, and hybrid chunking strategies
# - SQLite + LanceDB dual-backend storage
# - Natural language querying and LLM-ready snippet packing
# - MCP (Model Context Protocol) server integration
# - Point-in-time snapshot support for corpus metrics
#
# The tool is designed for researchers and developers who want to explore,
# query, and build AI-powered tools on top of historical diary and journal data.
#
# Author: Eric G. Suchanek, PhD
# Last Revision: 2026-03-16



[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diary-kg"
version = "0.1.0"
description = "A knowledge graph builder and semantic search engine for diaries and journals"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
readme = "README.md"
homepage = "https://github.com/Flux-Frontiers/diary_kg"
repository = "https://github.com/Flux-Frontiers/diary_kg"
keywords = ["knowledge-graph", "diary", "journal", "lancedb", "sqlite", "semantic-search", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
packages = [
    { include = "diary_kg", from = "src" },
    { include = "diary_transformer", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
lancedb = ">=0.29.0"
numpy = ">=1.24.0"

# from personal_agent
transformers = "^4.57.6"
sentence-transformers = "^5.2.0"

streamlit = { version = ">=1.35.0", optional = true }
pyvis = { version = ">=0.3.2", optional = true }
pandas = ">=2.0.0"
rich = "^14.3.3"
click = ">=8.1.0"
mcp = ">=1.0.0"
plotly = { version = ">=5.14.0", optional = true }
pyvista = { version = ">=0.44.0", extras = ["jupyter"], optional = true }
pyvistaqt = { version = ">=0.11.0", optional = true }
PyQt5 = { version = ">=5.15.0", optional = true }
param = { version = ">=2.0.0", optional = true }
markdown = { version = ">=3.6", optional = true }
trame-vtk = { version = ">=2.0.0", optional = true }
spacy = "^3.8.11"
doc-kg = { git = "https://github.com/Flux-Frontiers/doc_kg.git" }
code-kg = { git = "https://github.com/Flux-Frontiers/code_kg.git" }
ftree-kg = { git = "https://github.com/Flux-Frontiers/ftree_kg.git" }


[tool.poetry.extras]
viz = ["streamlit", "pyvis", "plotly"]
viz3d = ["pyvista", "pyvistaqt", "PyQt5", "param", "markdown", "trame-vtk"]


[tool.poetry.group.viz3d]
optional = true

[tool.poetry.group.viz3d.dependencies]
pyvista = { version = ">=0.44.0", extras = ["jupyter"] }
pyvistaqt = ">=0.11.0"
PyQt5 = ">=5.15.0"
param = ">=2.0.0"
markdown = ">=3.6"
trame-vtk = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = "^4.5.1"
detect-secrets = "^1.5.0"
pylint = "^4.0.5"
pdoc = ">=14.0.0"

[tool.poetry.scripts]
diarykg            = "diary_kg.cli:main"
diarykg-mcp        = "diary_kg.mcp_server:main"
diary-transformer  = "diary_transformer.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "cyclic-import",           # R0401
    "broad-exception-caught",  # W0718
    "cell-var-from-loop",      # W0640
    "undefined-variable",      # E0602
    "import-outside-toplevel", # C0415
]

[tool.diarykg]
# Directories to include in the knowledge graph build and analysis.
# When unset, all directories are indexed.
include = ["diary"]

[tool.dockg]
# Exclude directories from the knowledge graph by default.
# Exclude pepys cuz it has the whole diary!
# Exclude diary since it's pushed into diarykg

exclude = ["src", "bundles", "dist", "pepys", "diary"]

[tool.poe.tasks.docs]
help = "Generate project documentation"
sequence = [
  { shell = "cd src && pdoc --o ../docs --logo ./logo.png diary_kg diary_transformer" },
]

[tool.poe.tasks.wiki]
help = "Generate and publish GitHub wiki from docs/"
cmd = "python scripts/generate_wiki.py"

[tool.poe.tasks.wiki-preview]
help = "Preview wiki generation without publishing"
cmd = "python scripts/generate_wiki.py --dry-run"
