# pyproject.toml — DiaryKG package configuration (PEP 621)
#
# Author: Eric G. Suchanek, PhD
# Last Revision: 2026-04-28
#
# Build system : Poetry 2.x with PEP 621 [project] table
#
# Quick install (pip)
# -------------------
#   pip install -e ".[dev]"             core + dev tools (pytest, ruff, mypy, etc.)
#   pip install -e ".[viz]"             core + Streamlit/Plotly/PyVis visualizer
#   pip install -e ".[viz3d]"           core + 3D visualization (pyvista, etc.)
#   pip install -e ".[kgdeps]"          core + KG integrations (pycode-kg, doc-kg)
#   pip install -e ".[all]"             everything above
#   pip install -e "."                  core runtime only
#
# Quick install (poetry)
# ----------------------
#   poetry install --all-extras         everything
#   poetry install --extras "dev"       core + dev tools only
#   poetry install --extras "viz"       core + Streamlit/Plotly visualizer only
#   poetry install --extras "viz3d"     core + 3D visualization only
#   poetry install --extras "kgdeps"    core + KG integrations only
#   poetry install                      core runtime only
#
# First-time setup
# ----------------
#   python -m venv .venv
#   source .venv/bin/activate       # Windows: .venv\Scripts\activate
#   pip install -e ".[dev]"
#
# Run tests
# ---------
#   pytest                          uses pytest.ini (testpaths = tests/)
#   pytest -m "not slow"            skip slow tests
#   pytest --cov=diary_kg           with coverage
#
# Build KG indices (after code changes)
# --------------------------------------
#   diarykg build --source pepys/pepys_enriched_full.txt
#   dockg build --repo .

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry]
packages = [
    { include = "diary_kg", from = "src" },
    { include = "diary_transformer", from = "src" },
]

# Git-based dependencies (not available on PyPI — install manually if needed):
#   pip install git+https://github.com/Flux-Frontiers/agent_kg.git
#   pip install git+https://github.com/Flux-Frontiers/ftree_kg.git
#   pip install git+https://github.com/Flux-Frontiers/memory_kg.git
[tool.poetry.dependencies]
agent-kg    = { git = "https://github.com/Flux-Frontiers/agent_kg.git",  optional = true }
ftree-kg    = { git = "https://github.com/Flux-Frontiers/ftree_kg.git",  optional = true }
memory-kg   = { git = "https://github.com/Flux-Frontiers/memory_kg.git", optional = true }

# ---------------------------------------------------------------------------
# PEP 621 project metadata
# ---------------------------------------------------------------------------
[project]
name = "diary-kg"
version = "0.92.2"
description = "A knowledge graph builder and semantic search engine for diaries and journals"
readme = "README.md"
license = "Elastic-2.0"
authors = [
    { name = "Eric G. Suchanek, PhD", email = "suchanek@mac.com" }
]
keywords = ["knowledge-graph", "diary", "journal", "lancedb", "sqlite", "semantic-search", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.1.0,<9",
    "kgmodule-utils>=0.2.0",
    "lancedb>=0.29.0",
    "mcp>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "rich>=14.3.3,<15",
    "sentence-transformers>=5.4.1",
    "spacy>=3.8.11,<4",
    "transformers>=4.57.6,<5",
]

[project.optional-dependencies]
dev = [
    "detect-secrets>=1.5.0",
    "mypy>=1.10.0",
    "pdoc>=14.0.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
viz = [
    "plotly>=5.14.0",
    "pyvis>=0.3.2",
    "streamlit>=1.35.0",
]
viz3d = [
    "markdown>=3.6",
    "param>=2.0.0",
    "PyQt5>=5.15.0",
    "pyvista[jupyter]>=0.44.0",
    "pyvistaqt>=0.11.0",
    "trame-vtk>=2.0.0",
]
# pycode-kg and doc-kg are on PyPI; agent-kg, ftree-kg, memory-kg are not yet — install manually from git
kgdeps = [
    "doc-kg>=0.12.0",
    "pycode-kg>=0.16.0",
]
all = [
    "detect-secrets>=1.5.0",
    "doc-kg>=0.12.0",
    "markdown>=3.6",
    "mypy>=1.10.0",
    "pdoc>=14.0.0",
    "param>=2.0.0",
    "plotly>=5.14.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pycode-kg>=0.16.0",
    "PyQt5>=5.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pyvista[jupyter]>=0.44.0",
    "pyvistaqt>=0.11.0",
    "pyvis>=0.3.2",
    "ruff>=0.4.0",
    "streamlit>=1.35.0",
    "trame-vtk>=2.0.0",
]

[project.urls]
Homepage  = "https://github.com/Flux-Frontiers/diary_kg"
Repository = "https://github.com/Flux-Frontiers/diary_kg"

[project.scripts]
diarykg           = "diary_kg.cli:main"
diarykg-mcp       = "diary_kg.mcp_server:main"
diary-transformer = "diary_transformer.cli:main"
diary-embedder    = "diary_transformer.diary_embedder:main"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py312"
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version        = "3.12"
strict                = false
ignore_missing_imports = true
mypy_path             = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"
pythonpath = ["src"]
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning",
]

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "broad-exception-caught",   # W0718
    "cell-var-from-loop",       # W0640
    "cyclic-import",            # R0401
    "import-outside-toplevel",  # C0415
    "undefined-variable",       # E0602
]

# ---------------------------------------------------------------------------
# PyCodeKG / DocKG index configuration
# ---------------------------------------------------------------------------
[tool.pycodekg]
exclude = ["tests"]
include = ["src"]

[tool.diarykg]
include = ["diary"]

[tool.dockg]
exclude = ["src", "bundles", "dist", "pepys", "diary"]

# ---------------------------------------------------------------------------
# Poe tasks
# ---------------------------------------------------------------------------
[tool.poe.tasks.docs]
help     = "Generate project documentation"
sequence = [
    { shell = "cd src && pdoc --o ../docs --logo ./logo.png diary_kg diary_transformer" },
]

[tool.poe.tasks.wiki]
help = "Generate and publish GitHub wiki from docs/"
cmd  = "python scripts/generate_wiki.py"

[tool.poe.tasks.wiki-preview]
help = "Preview wiki generation without publishing"
cmd  = "python scripts/generate_wiki.py --dry-run"
